--- a/style/sass.css
+++ b/style/sass.css
@@ -3301,7 +3301,6 @@ p {
 .body__index .conte_pilares .contenedor_de_animaciones {
   width: 100vw;
   height: 100vh;
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   align-items: start;
@@ -3377,14 +3376,12 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .contador {
   transform: translateY(100%);
-  border: 1px solid rgb(251, 255, 0);
   text-align: end;
   color: #fff;
   font-family: MargoBeuys;
@@ -3396,14 +3393,12 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .titulo {
   transform: translateY(100%);
-  border: 1px solid rgb(251, 255, 0);
   text-align: center;
   color: #fff;
   font-family: MargoBeuys;
@@ -3416,7 +3411,6 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -3424,7 +3418,6 @@ p {
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .contenido {
   transform: translateY(100%);
   width: 40%;
-  border: 1px solid rgb(251, 255, 0);
   text-align: start;
   color: #fff;
   font-family: Gotham;
@@ -3446,14 +3439,12 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto .contador {
   transform: translateY(100%);
-  border: 1px solid rgb(251, 255, 0);
   text-align: end;
   color: #111111;
   font-family: MargoBeuys;
@@ -3465,14 +3456,12 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto .titulo {
   transform: translateY(100%);
-  border: 1px solid rgb(251, 255, 0);
   text-align: center;
   color: #111111;
   font-family: MargoBeuys;
@@ -3485,7 +3474,6 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -3493,7 +3481,6 @@ p {
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto .contenido {
   transform: translateY(100%);
   width: 40%;
-  border: 1px solid rgb(251, 255, 0);
   text-align: start;
   color: #111111;
   font-family: Gotham;
@@ -3515,14 +3502,12 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto .contador {
   transform: translateY(100%);
-  border: 1px solid rgb(251, 255, 0);
   text-align: end;
   color: #ffffff;
   font-family: MargoBeuys;
@@ -3534,14 +3519,12 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto .titulo {
   transform: translateY(100%);
-  border: 1px solid rgb(251, 255, 0);
   text-align: center;
   color: #ffffff;
   font-family: MargoBeuys;
@@ -3554,7 +3537,6 @@ p {
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto {
   width: 100%;
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -3562,7 +3544,6 @@ p {
 .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto .contenido {
   transform: translateY(100%);
   width: 40%;
-  border: 1px solid rgb(251, 255, 0);
   text-align: start;
   color: #ffffff;
   font-family: Gotham;
@@ -5562,6 +5543,7 @@ p {
     display: flex;
     flex-direction: column;
     margin: 0em 1em 5em 1em;
+    gap: 2em;
   }
   .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios {
     display: flex;
@@ -6318,187 +6300,270 @@ p {
     height: 100%;
     width: 20vw;
   }
-  .body__index .cont_pilar {
+  .body__index .conte_pilares .contenedor_de_animaciones {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    overflow: hidden;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_uno {
+    opacity: 0%;
+    top: 0vh;
+    position: absolute;
+    z-index: -3;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_dos {
+    opacity: 0%;
+    top: 25vh;
+    position: absolute;
+    z-index: -1;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_dos .lottie_dos {
+    width: 100%;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_tres {
+    opacity: 0%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100vw;
+    height: 100vh;
+    top: 0vh;
+    position: absolute;
+    z-index: 0;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .fondo_negro {
+    top: 50vh;
+    z-index: -4;
+    position: absolute;
+    width: 1px;
+    height: 1px;
     background: #171717;
+    border-radius: 100%;
   }
-  .body__index .cont_pilar .cont_contenido_pilar {
-    background: rgba(80, 80, 80, 0.01);
-    -webkit-backdrop-filter: blur(2.5px);
-            backdrop-filter: blur(2.5px);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1em 1em 3em 1em;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .contador_pilar {
-    width: 100%;
-    display: flex;
-    justify-content: end;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .contador_pilar .contador {
-    color: #fff;
-    font-family: MargoBeuys;
-    font-size: calc(1px + 7vh);
-    font-style: normal;
-    font-weight: 900;
-    line-height: 136%;
-    text-transform: uppercase;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .titulo {
-    width: 100%;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .titulo h2 {
-    text-align: center;
-    color: #fff;
-    text-shadow: 0px 0px 38px #000;
-    font-family: MargoBeuys;
-    font-size: calc(1px + 6.5vh);
-    font-style: normal;
-    font-weight: 900;
-    line-height: 138.5%;
-    /* 124.65px */
-    letter-spacing: 4.5px;
-    text-transform: capitalize;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .contenido_pilar {
-    width: 100%;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    align-items: start;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .contenido_pilar .parrafo_uno {
-    width: 100%;
-    color: #fff;
-    font-family: poppins;
-    font-size: calc(1px + 2vh);
-    font-style: normal;
-    font-weight: 300;
-    line-height: 138.5%;
-    letter-spacing: 0.75px;
-    text-transform: capitalize;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .contenido_pilar .parrafo_dos {
-    color: #fff;
-    font-family: poppins;
-    font-size: calc(1px + 1vh);
-    font-style: normal;
-    font-weight: 500;
-    line-height: 138.5%;
-    letter-spacing: 0.75px;
-    text-transform: capitalize;
-    white-space: nowrap;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .cont_animacion_uno {
-    top: -5em;
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .fondo_blanco {
+    top: 50vh;
+    z-index: -2;
     position: absolute;
-    z-index: 1;
-    width: 100%;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .cont_animacion_dos {
-    top: -10em;
-    position: absolute;
-    z-index: -1;
-    width: 0vw;
-  }
-  .body__index .cont_pilar .cont_contenido_pilar .cont_animacion_tres {
-    top: -5em;
-    position: absolute;
-    z-index: -1;
-    width: 90%;
-  }
-  .body__index .cont_pilar_wite {
-    width: 100vw;
-    height: 100vh;
+    width: 1px;
+    height: 1px;
     background: #ffffff;
-    display: flex;
+    border-radius: 100%;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar {
-    background: rgba(255, 255, 255, 0.01);
-    -webkit-backdrop-filter: blur(2.5px);
-            backdrop-filter: blur(2.5px);
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .fondo_negro_dos {
+    top: 50vh;
+    z-index: -1;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    background: #171717;
+    border-radius: 100%;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto {
+    padding: 2em 2em 2em 2em;
+    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    padding: 3em 1em 3em 1em;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .contador_pilar {
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
     width: 100%;
     display: flex;
-    justify-content: end;
+    flex-direction: column;
+    overflow: hidden;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .contador_pilar .contador {
-    color: #000000;
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .contador {
+    transform: translateY(100%);
+    text-align: end;
+    color: #fff;
     font-family: MargoBeuys;
-    font-size: calc(1px + 7vh);
+    font-size: 50px;
     font-style: normal;
     font-weight: 900;
-    line-height: 136%;
+    line-height: 136%; /* 68px */
     text-transform: uppercase;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .titulo {
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .titulo h2 {
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .titulo {
+    transform: translateY(100%);
     text-align: center;
-    color: #000000;
+    color: #fff;
     font-family: MargoBeuys;
-    font-size: calc(1px + 6.5vh);
+    font-size: calc(1px + 10vw);
     font-style: normal;
     font-weight: 900;
-    line-height: 138.5%;
-    /* 124.65px */
+    line-height: 138.5%; /* 124.65px */
     letter-spacing: 4.5px;
     text-transform: capitalize;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .contenido_pilar {
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
     width: 100%;
     display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    align-items: start;
+    flex-direction: column;
+    overflow: hidden;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .contenido_pilar .parrafo_uno {
-    width: 100%;
-    color: #000000;
-    font-family: poppins;
-    font-size: calc(1px + 2vh);
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .contenido {
+    transform: translateY(100%);
+    width: 90%;
+    text-align: start;
+    color: #fff;
+    font-family: Gotham;
+    font-size: calc(1px + 3.5vw);
     font-style: normal;
     font-weight: 300;
-    line-height: 138.5%;
+    line-height: 138.5%; /* 20.775px */
     letter-spacing: 0.75px;
     text-transform: capitalize;
   }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .contenido_pilar .parrafo_dos {
-    color: #000000;
-    font-family: poppins;
-    font-size: calc(1px + 1vh);
-    font-style: normal;
-    font-weight: 500;
-    line-height: 138.5%;
-    letter-spacing: 0.75px;
-    text-transform: capitalize;
-    white-space: nowrap;
-  }
-  .body__index .cont_pilar_wite .cont_contenido_pilar .cont_animacion_dos {
-    top: 10em;
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos {
+    padding: 2em 2em 2em 2em;
     position: absolute;
-    z-index: -1;
     width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto .contador {
+    transform: translateY(100%);
+    text-align: end;
+    color: #111111;
+    font-family: MargoBeuys;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 136%; /* 68px */
+    text-transform: uppercase;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto .titulo {
+    transform: translateY(110%);
+    text-align: center;
+    color: #111111;
+    font-family: MargoBeuys;
+    font-size: calc(1px + 9vw);
+    font-style: normal;
+    font-weight: 900;
+    line-height: 138.5%; /* 124.65px */
+    letter-spacing: 4.5px;
+    text-transform: capitalize;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_dos .contenedor_texto .contenido {
+    transform: translateY(100%);
+    width: 90%;
+    text-align: start;
+    color: #111111;
+    font-family: Gotham;
+    font-size: calc(1px + 3.5vw);
+    font-style: normal;
+    font-weight: 300;
+    line-height: 138.5%; /* 20.775px */
+    letter-spacing: 0.75px;
+    text-transform: capitalize;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres {
+    padding: 2em 2em 2em 2em;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto .contador {
+    transform: translateY(100%);
+    text-align: end;
+    color: #ffffff;
+    font-family: MargoBeuys;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 136%; /* 68px */
+    text-transform: uppercase;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto .titulo {
+    transform: translateY(110%);
+    text-align: center;
+    color: #ffffff;
+    font-family: MargoBeuys;
+    font-size: calc(1px + 9vw);
+    font-style: normal;
+    font-weight: 900;
+    line-height: 138.5%; /* 124.65px */
+    letter-spacing: 4.5px;
+    text-transform: capitalize;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .body__index .conte_pilares .contenedor_de_animaciones .cont_texto_tres .contenedor_texto .contenido {
+    transform: translateY(100%);
+    width: 90%;
+    text-align: start;
+    color: #ffffff;
+    font-family: Gotham;
+    font-size: calc(1px + 3.5vw);
+    font-style: normal;
+    font-weight: 300;
+    line-height: 138.5%; /* 20.775px */
+    letter-spacing: 0.75px;
+    text-transform: capitalize;
   }
   .body__index .cont_reel_diagonal {
     width: 100vw;
     height: 100vh;
     background: #171717;
-    display: none;
+    display: flex;
     overflow: hidden;
   }
   .body__index .cont_reel_diagonal .cont_fixed_reel {
@@ -6534,19 +6599,20 @@ p {
     flex-direction: row;
     z-index: 0;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     transform: rotate(5deg);
-    gap: 0.5em;
+    gap: 2em;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
+    margin-top: 10vh;
   }
   .body__index .cont_reel_diagonal .cont_reels .reel_uno {
     margin-left: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
-    height: 70%;
+    width: 50%;
+    height: 50%;
     transform: skew(15deg);
     background: rgb(251, 255, 0);
   }
@@ -6557,20 +6623,20 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
-    height: 70%;
+    width: 50%;
+    height: 50%;
     transform: skew(15deg);
     background: rgb(251, 255, 0);
   }
   .body__index .cont_reel_diagonal .cont_reels .reel_dos .animacion_aboutme {
-    height: 100%;
+    width: 500px;
   }
   .body__index .cont_reel_diagonal .cont_reels .reel_tres {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
-    height: 70%;
+    width: 50%;
+    height: 50%;
     transform: skew(15deg);
     background: rgb(251, 255, 0);
   }
