add nueva animacion

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -5000,7 +5000,7 @@
       width: 100vw;
       height: 100vh;
       background: #171717;
-      display: flex;
+      display: none;
       overflow: hidden;
       .cont_fixed_reel {
         width: 80%;
